--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "prebuild": "npm run clean",
     "test": "vitest",
     "test:coverage": "vitest --coverage",
-    "type-check": "tsc --noEmit"
+    "type-check": "tsc --noEmit",
+    "start:server": "tsx src/server.ts"
   },
   "keywords": [
     "github",
@@ -35,9 +36,12 @@
   "author": "Chris Timperley",
   "license": "GPL-3.0",
   "dependencies": {
+    "@fastify/swagger": "^8.15.0",
+    "@fastify/swagger-ui": "^4.1.0",
     "@octokit/rest": "^22.0.0",
     "commander": "^14.0.1",
     "dotenv": "^17.2.2",
+    "fastify": "^4.28.1",
     "js-yaml": "^4.1.0"
   },
   "devDependencies": {
@@ -50,6 +54,7 @@
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
+    "pino-pretty": "^13.1.1",
     "prettier": "^3.6.2",
     "tsx": "^4.16.2",
     "typescript": "^5.6.2",
