--- a/tsconfig.json
+++ b/tsconfig.json
@@ -24,12 +24,6 @@
     "verbatimModuleSyntax": false,
     "isolatedModules": true
   },
-  "include": [
-    "src/**/*"
-  ],
-  "exclude": [
-    "node_modules",
-    "dist",
-    "**/*.test.ts"
-  ]
+  "include": ["src/**/*"],
+  "exclude": ["node_modules", "dist", "**/*.test.ts"]
 }
