--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,7 +3,11 @@
   "image": "mcr.microsoft.com/devcontainers/typescript-node:1-22-bookworm",
   "features": {
     "ghcr.io/devcontainers/features/github-cli:1": {},
-    "ghcr.io/devcontainers/features/git:1": {}
+    "ghcr.io/devcontainers/features/git:1": {},
+    "ghcr.io/devcontainers/features/python:1": {
+      "version": "3.11"
+    },
+    "ghcr.io/devcontainers-extra/features/pre-commit:2": {}
   },
   "customizations": {
     "vscode": {
@@ -28,6 +32,6 @@
     }
   },
   "forwardPorts": [3000, 8000],
-  "postCreateCommand": "npm install",
+  "postCreateCommand": "npm install && pre-commit install",
   "remoteUser": "node"
 }
