--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "scripts": {
     "build": "tsc",
+    "build:frontend": "vite build",
     "dev": "tsx src/cli.ts",
+    "dev:frontend": "vite",
     "start": "node dist/cli.js",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
@@ -42,10 +44,22 @@
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^4.1.0",
     "@octokit/rest": "^22.0.0",
+    "@types/react": "^19.1.14",
+    "@types/react-dom": "^19.1.9",
+    "@vitejs/plugin-react": "^5.0.3",
+    "autoprefixer": "^10.4.21",
+    "clsx": "^2.1.1",
     "commander": "^14.0.1",
     "dotenv": "^17.2.2",
     "fastify": "^4.28.1",
-    "js-yaml": "^4.1.0"
+    "js-yaml": "^4.1.0",
+    "lucide-react": "^0.544.0",
+    "postcss": "^8.5.6",
+    "react": "^19.1.1",
+    "react-dom": "^19.1.1",
+    "recharts": "^3.2.1",
+    "tailwindcss": "^3.4.17",
+    "vite": "^5.4.20"
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
