--- a/package.json
+++ b/package.json
@@ -41,24 +41,25 @@
   "author": "Chris Timperley",
   "license": "GPL-3.0",
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.1",
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^4.1.0",
+    "@mui/icons-material": "^7.3.2",
+    "@mui/material": "^7.3.2",
+    "@mui/x-data-grid": "^8.12.1",
     "@octokit/rest": "^22.0.0",
     "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
-    "autoprefixer": "^10.4.21",
-    "clsx": "^2.1.1",
     "commander": "^14.0.1",
     "dotenv": "^17.2.2",
     "fastify": "^4.28.1",
     "js-yaml": "^4.1.0",
     "lucide-react": "^0.544.0",
-    "postcss": "^8.5.6",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "recharts": "^3.2.1",
-    "tailwindcss": "^3.4.17",
     "vite": "^5.4.20"
   },
   "devDependencies": {
