--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -101,6 +101,37 @@
         "panel": "shared"
       },
       "problemMatcher": ["$eslint-stylish"]
+    },
+    {
+      "type": "shell",
+      "label": "frontend",
+      "command": "npm",
+      "args": ["run", "dev:frontend"],
+      "group": "build",
+      "isBackground": true,
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": false,
+        "panel": "shared",
+        "showReuseMessage": true,
+        "clear": false
+      },
+      "problemMatcher": {
+        "pattern": [
+          {
+            "regexp": ".",
+            "file": 1,
+            "location": 2,
+            "message": 3
+          }
+        ],
+        "background": {
+          "activeOnStart": true,
+          "beginsPattern": "VITE",
+          "endsPattern": "ready in \\d+ms"
+        }
+      }
     }
   ]
 }
