--- a/package.json
+++ b/package.json
@@ -43,16 +43,17 @@
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
+    "@fastify/cors": "^8.5.0",
     "@fastify/swagger": "^8.15.0",
     "@fastify/swagger-ui": "^4.1.0",
     "@mui/icons-material": "^7.3.2",
     "@mui/material": "^7.3.2",
     "@mui/x-data-grid": "^8.12.1",
+    "@octokit/graphql": "^9.0.1",
+    "@octokit/rest": "^22.0.0",
     "@types/react": "^19.1.14",
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
-    "@octokit/graphql": "^9.0.1",
-    "@octokit/rest": "^22.0.0",
     "bottleneck": "^2.19.5",
     "commander": "^14.0.1",
     "dotenv": "^17.2.2",
