infra: added dev:full script to package.json

--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "build:frontend": "vite build",
     "dev": "tsx src/cli.ts",
     "dev:frontend": "vite",
+    "dev:full": "concurrently --names \"API,UI\" --prefix-colors \"blue,green\" \"npm run start:server\" \"npm run dev:frontend\"",
     "start": "node dist/cli.js",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
@@ -72,6 +73,7 @@
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
     "@vitest/coverage-v8": "^2.0.0",
+    "concurrently": "^9.2.1",
     "eslint": "^8.57.1",
     "eslint-config-prettier": "^10.1.8",
     "eslint-plugin-prettier": "^5.5.4",
