--- a/package.json
+++ b/package.json
@@ -1,12 +1,9 @@
 {
   "name": "check-the-vibes",
   "version": "1.0.0",
-  "description": "A simple GitHub repo scanner that assesses for SWE best practices and good teamwork",
+  "description": "A web application that analyzes GitHub repositories to assess software engineering best practices and teamwork",
   "type": "module",
   "main": "dist/index.js",
-  "bin": {
-    "check-the-vibes": "dist/cli.js"
-  },
   "engines": {
     "node": ">=22.0.0",
     "npm": ">=10.0.0"
@@ -14,10 +11,8 @@
   "scripts": {
     "build": "tsc",
     "build:frontend": "vite build",
-    "dev": "tsx src/cli.ts",
     "dev:frontend": "vite",
     "dev:full": "concurrently --names \"API,UI\" --prefix-colors \"blue,green\" \"npm run start:server\" \"npm run dev:frontend\"",
-    "start": "node dist/cli.js",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write src/**/*.ts",
@@ -56,10 +51,8 @@
     "@types/react-dom": "^19.1.9",
     "@vitejs/plugin-react": "^5.0.3",
     "bottleneck": "^2.19.5",
-    "commander": "^14.0.1",
     "dotenv": "^17.2.2",
     "fastify": "^4.28.1",
-    "js-yaml": "^4.1.0",
     "lucide-react": "^0.544.0",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
@@ -68,7 +61,6 @@
   },
   "devDependencies": {
     "@eslint/js": "^9.36.0",
-    "@types/js-yaml": "^4.0.9",
     "@types/node": "^22.7.7",
     "@typescript-eslint/eslint-plugin": "^8.44.1",
     "@typescript-eslint/parser": "^8.44.1",
