infra: simplified npm scripts and tasks.json

--- a/package.json
+++ b/package.json
@@ -11,18 +11,16 @@
   "scripts": {
     "build": "tsc",
     "build:frontend": "vite build",
+    "dev": "concurrently --names \"API,UI\" --prefix-colors \"blue,green\" \"npm run dev:server\" \"npm run dev:frontend\"",
     "dev:frontend": "vite",
-    "dev:full": "concurrently --names \"API,UI\" --prefix-colors \"blue,green\" \"npm run start:server\" \"npm run dev:frontend\"",
+    "dev:server": "tsx src/server.ts",
     "lint": "eslint src/**/*.ts",
     "lint:fix": "eslint src/**/*.ts --fix",
     "format": "prettier --write src/**/*.ts",
     "format:check": "prettier --check src/**/*.ts",
     "clean": "rm -rf dist",
-    "prebuild": "npm run clean",
-    "test": "vitest",
-    "test:coverage": "vitest --coverage",
+    "test": "vitest run",
     "type-check": "tsc --noEmit",
-    "start:server": "tsx src/server.ts",
     "precommit:install": "pre-commit install",
     "precommit:run": "pre-commit run --all-files",
     "precommit:update": "pre-commit autoupdate"
