--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -58,6 +58,20 @@
         "panel": "shared"
       },
       "problemMatcher": ["$eslint-stylish"]
+    },
+    {
+      "type": "shell",
+      "label": "format",
+      "command": "npm",
+      "args": ["run", "format"],
+      "group": "build",
+      "presentation": {
+        "echo": true,
+        "reveal": "always",
+        "focus": false,
+        "panel": "shared"
+      },
+      "problemMatcher": []
     }
   ]
 }
